syntax = "proto3";

package rpc;

option go_package = "github.com/go-sif/sif/internal/rpc";

// ClusterService manages the assembly of a Sif cluster
service ClusterService {
    rpc RegisterWorker (MRegisterRequest) returns (MRegisterResponse) {}
}

message MRegisterRequest {
    string id = 1;
    int32  port = 2;
}

message MRegisterResponse {
    int64 time = 1;
}

// For the moment, this is identical to MRegisterRequest, but may diverge in the future.
message MWorkerDescriptor {
    string id = 1;
    string host = 2;
    int32  port = 3;
}
